@@ -9,6 +9,7 @@
 #include <linux/moduleparam.h>
 #include <linux/netdevice.h>
 #include <linux/skbuff.h>
+#include <linux/version.h>
 #include <linux/netfilter/x_tables.h>
 #include "xt_iface.h"
 #include "compat_xtables.h"
