@@ -4,6 +4,7 @@ HEAD
 Fixes:
 - libxt_ACCOUNT: fix compilation after missing libxtables_CFLAGS
 - build: fix compilation after missing libxtables_CFLAGS in submodules
+- build: add missing linux/version.h includes where needed
 Changes:
 - Remove unsupported ipset 4.x from the Xtables-addons distribution
 - ipset: move ipset_errcode from src to library to avoid undefined reference
